--- a/server/src/main/resources/config.properties.example
+++ b/server/src/main/resources/config.properties.example
@@ -1,7 +1,7 @@
 # Konfigurasi Database PostgreSQL
 DB_URL=jdbc:postgresql://localhost:5432/kantin_cepat_db
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=cobapostgre2025
 
 # Konfigurasi Server
 SERVER_PORT=8080
